--- a/Demo.Web/Views/Shared/_Layout.cshtml
+++ b/Demo.Web/Views/Shared/_Layout.cshtml
@@ -17,13 +17,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    @Html.ActionLink("Application name", MVC.Home.Index(), new { @class = "navbar-brand" })
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Home", MVC.Home.Index())</li>
+                        <li>@Html.ActionLink("About", MVC.Home.About())</li>
                     </ul>
                 </div>
             </div>
