--- a/Demo.Web/Views/Shared/_Layout.cshtml
+++ b/Demo.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Home", MVC.Home.Index())</li>
-                        <li>@Html.ActionLink("About", MVC.Home.About())</li>
+                        <li>@Html.ActionLink("Films", MVC.Films.Index())</li>
+                        <li>@Html.ActionLink("Add a film", MVC.Films.Add())</li>
                     </ul>
                 </div>
             </div>
