Added link to film info from film index.

--- a/Demo.Web/Views/Films/Index.cshtml
+++ b/Demo.Web/Views/Films/Index.cshtml
@@ -12,6 +12,6 @@
 </div>
 <table class="table table-striped">
     @foreach (var name in Model.Names) {
-        <tr><td>@name</td></tr>
+        <tr><td>@Html.ActionLink(name, MVC.Films.Info(name))</td></tr>
     }
 </table>
