Added English film page with total price function

--- a/Demo.Web/Views/Shared/_Layout.cshtml
+++ b/Demo.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                         <li>@Html.ActionLink("Home", MVC.Home.Index())</li>
                         <li>@Html.ActionLink("Films", MVC.Films.Index())</li>
                         <li>@Html.ActionLink("Add a film", MVC.Films.Add())</li>
+                        <li>@Html.ActionLink("English Films", MVC.Films.Eng())</li>
                     </ul>
                 </div>
             </div>
